--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,11 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: white;
 }
-body {
+html {
   height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
-    url(./img/gameBack.jpg);
+    url(../img/gameBack.jpg);
   background-size: cover;
   background-position: center;
 }
