renamed imgs / fixed paths

--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ html {
   height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
-    url(../img/gameBack.jpg);
+    url(../img/showcase.jpg);
   background-size: cover;
   background-position: center;
 }
