--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,15 @@
 :root {
-  --emphasis-color: (rgb(117, 106, 231));
+  --emphasis-color: (rgba(107, 95, 230, 1));
   --dark-emphasis: (indigo);
 }
-
 * {
-  transition: all 0.3s ease 0s;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
 }
-html {
-  height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
-    url(../img/showcase.jpg);
-  background-size: cover;
-  background-position: center;
+.emphasis {
+  color: rgba(107, 95, 230, 1);
 }
 li,
 a {
@@ -27,21 +19,47 @@ a {
   text-decoration: none;
 }
 header {
-  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)),
+    url(../img/showcase.jpg);
+  background-size: cover;
+  background-position: center;
+}
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 30px 10%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+button {
+  color: white;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 9px 25px;
+  background-color: rgba(107, 95, 230, 1);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  margin: 0.5rem;
+}
+button:hover {
+  background-color: white;
+  color: rgba(107, 95, 230, 1);
 }
 .logo {
   max-width: 100px;
   cursor: pointer;
   font-size: 3rem;
+  margin: 0.5rem;
 }
 .logo:hover {
   transition: all 0.3s ease 0s;
   color: rgba(107, 95, 230, 1);
 }
+
 .nav-links {
   list-style: none;
 }
@@ -55,17 +73,46 @@ header {
 .nav-links li a:hover {
   color: rgb(107, 95, 230);
 }
-button {
-  font-weight: 500;
-  font-size: 15px;
-  padding: 9px 25px;
-  background-color: rgba(107, 95, 230, 1);
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
+
+#showcase {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 20px;
 }
-button:hover {
+#showcase h1 {
+  font-size: 50px;
+  line-height: 1.2;
+}
+#showcase p {
+  font-size: 20px;
+  max-width: 75%;
+}
+#section-a {
+  padding: 20px;
+  background-color: rgba(107, 95, 230, 1);
+  text-align: center;
+}
+#section-b {
+  padding: 20px;
   background-color: white;
   color: rgba(107, 95, 230, 1);
+  text-align: center;
+  font-weight: 500;
+}
+#section-c {
+  display: flex;
+}
+#section-c div {
+  padding: 20px;
+}
+#section-c .box-1,
+#section-c .box-3 {
+  background-color: rgba(107, 95, 230, 1);
+}
+#section-c .box-2 {
+  background-color: rgb(179, 175, 230);
 }
