--- a/style/style.css
+++ b/style/style.css
@@ -116,3 +116,16 @@ button:hover {
 #section-c .box-2 {
   background-color: rgb(179, 175, 230);
 }
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  z-index: 0;
+  transition: all 1s;
+}
