--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transition: all 0.3s ease 0s;
 }
 .emphasis {
   color: rgba(107, 95, 230, 1);
@@ -75,13 +76,13 @@ button:hover {
 }
 
 #showcase {
-  height: 80%;
+  /* height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 0 20px;
+  padding: 0 20px; */
 }
 #showcase h1 {
   font-size: 50px;
@@ -116,16 +117,39 @@ button:hover {
 #section-c .box-2 {
   background-color: rgb(179, 175, 230);
 }
+.container {
+  width: 90%;
+  margin: 10px auto;
+}
+.carousel {
+  border: 2px solid #ccc;
+  height: 600px;
+  margin-top: 2rem;
+}
 .slider {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 400%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
-  z-index: 0;
+  /* opacity: 0;
+  z-index: 0; */
   transition: all 1s;
+}
+.slider section {
+  flex-basis: 100%;
+}
+.controls .arrow {
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+.arrow.left {
+  left: 10px;
+}
+.arrow.right {
+  right: 10px;
 }
