--- a/style/stylesORG.css
+++ b/style/stylesORG.css
@@ -1,79 +1,140 @@
 :root {
-  --emphasis-color: (rgb(117, 106, 231));
+  --emphasis-color: (rgba(107, 95, 230, 1));
   --dark-emphasis: (indigo);
 }
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: 62.5%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
-  transition-duration: 300ms;
+  transition: all 0.1s ease 0s;
 }
 .emphasis {
-  color: rgb(117, 106, 231);
+  color: rgba(107, 95, 230, 1);
 }
-body {
-  transition-duration: 100ms;
+li,
+a {
+  font-weight: 500;
+  font-size: 2rem;
+  color: white;
+  text-decoration: none;
+}
+header {
+  color: white;
   height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
-    url(./img/gameBack.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)),
+    url(../img/showcase.jpg);
   background-size: cover;
   background-position: center;
 }
 nav {
-  width: 100%;
-}
-.nav-links {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-  vertical-align: center;
-  font-size: 1rem;
-  list-style-type: none;
+  padding: 3rem 10%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+/* button {
+  color: white;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 0.9rem 2rem;
+  background-color: rgba(107, 95, 230, 1);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  margin: 0.5rem;
+} */
+button:hover {
+  background-color: white;
+  color: rgba(107, 95, 230, 1);
+}
+.shop-button {
+  color: white;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 0.9rem 2rem;
+  background-color: rgba(107, 95, 230, 1);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  margin: 0.5rem;
 }
 .logo {
-  min-width: 100px;
+  max-width: 100px;
+  cursor: pointer;
+  font-size: 5rem;
+  margin: 0.5rem;
 }
 .logo:hover {
-  color: rgb(117, 106, 231);
-  font-weight: bolder;
+  transition: all 0.3s ease 0s;
+  color: rgba(107, 95, 230, 1);
 }
-.fa-gamepad:hover {
-  background-color: rgb(117, 106, 231);
+
+.nav-links {
+  list-style: none;
 }
-img {
-  max-height: 60px;
+.nav-links li {
+  display: inline-block;
+  padding: 0px 20px;
 }
-a {
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 1.5rem;
+.nav-links li a {
+  transition: all 0.3s ease 0s;
 }
-a:hover {
-  color: rgb(117, 106, 231);
+.nav-links li a:hover {
+  color: rgb(107, 95, 230);
 }
-i {
-  margin: 0;
-  padding: 0;
+
+#showcase {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
 }
-button {
-  cursor: pointer;
-  border-radius: 1.5rem;
-  border: 0;
-  padding: 0.5rem 1.5rem;
-  background-color: var(--emphasis-color);
-  font-weight: bold;
-  color: rgb(117, 106, 231);
+#showcase h1 {
+  font-size: 50px;
+  line-height: 1.2;
+}
+#showcase p {
+  font-size: 20px;
+  max-width: 75%;
+}
+#section-a {
+  padding: 20px;
+  background-color: rgba(107, 95, 230, 1);
+  text-align: center;
+}
+#section-b {
+  padding: 20px;
   background-color: white;
+  color: rgba(107, 95, 230, 1);
+  text-align: center;
+  font-weight: 500;
 }
-button:hover {
-  background-color: rgb(117, 106, 231);
-  color: white;
+#section-c {
+  display: flex;
 }
-.name {
-  font-size: 3rem;
-  font-weight: bolder;
+#section-c div {
+  padding: 20px;
+}
+#section-c .box-1,
+#section-c .box-3 {
+  background-color: rgba(107, 95, 230, 1);
+}
+#section-c .box-2 {
+  background-color: rgb(179, 175, 230);
+}
+/* ... */
+/* ... */
+/* this is the carousel section  */
+header > article {
+  display: grid;
+  height: 100%;
+}
+.article-slide {
+  height: 100%;
+  width: 100%;
+
+  border: 1px solid grey;
 }
