--- a/style/styles.css
+++ b/style/styles.css
@@ -12,6 +12,35 @@
 .emphasis {
   color: rgba(107, 95, 230, 1);
 }
+.nav {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 50px;
+}
+.nav-links {
+  list-style: none;
+}
+.nav-links > li > a:hover {
+  color: var(--emphasis-color);
+}
+header {
+  color: white;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)),
+    url(../img/showcase.jpg);
+  background-size: cover;
+  background-position: center;
+}
+button {
+  cursor: pointer;
+}
+button:hover {
+  background-color: white;
+  color: rgba(107, 95, 230, 1);
+}
 li,
 a {
   font-weight: 500;
@@ -26,13 +55,6 @@ header {
     url(../img/showcase.jpg);
   background-size: cover;
   background-position: center;
-}
-.nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
 }
 
 button {
@@ -72,20 +94,6 @@ button:hover {
   color: rgba(107, 95, 230, 1);
 }
 
-.nav-links {
-  list-style: none;
-}
-.nav-links li {
-  display: inline-block;
-  padding: 0px 20px;
-}
-.nav-links li a {
-  transition: all 0.3s ease 0s;
-}
-.nav-links li a:hover {
-  color: rgb(107, 95, 230);
-}
-
 #showcase {
   height: 80%;
   text-align: center;
@@ -102,4 +110,9 @@ button:hover {
 .emphasis {
   font-size: 50px;
   line-height: 1.2;
+}
+@media screen and (min-width: 480px) {
+  * {
+    color: red;
+  }
 }
