--- a/style/style.css
+++ b/style/style.css
@@ -60,6 +60,18 @@ a {
     max-height: 120px;
     padding-left: 5rem;
 }
+.header-text {
+    top: 40%;
+    margin: 0 auto;
+    text-align: center;
+    font-weight: lighter;
+    font-size: 3rem;
+    line-height: 1;
+}
+.header-text-small {
+    padding-top: 1rem;
+    font-size: 1.5rem;
+}
 .emphasis {
     color: var(--purple);
     font-size: 110%;
