--- a/style/style.css
+++ b/style/style.css
@@ -7,27 +7,25 @@
     box-sizing: border-box;
 
 }
+
 html {
     font-size: 62.5%;
     
 }
-body, h1, p, ul, li {
-    margin: 0;
-    padding: 0;
-  }
-
-body {
-    font-size: 1.6rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+@media screen and (max-width: 599px) {
+    body {
+        font-size: 1.6rem;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+    }
+    header {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
+          url(../img/showcase.jpg);
+        background-size: cover;
+        background-position: center;
+    }
 }
-header {
-    height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
-      url(../img/showcase.jpg);
-    background-size: cover;
-    background-position: center;
-}
+  /* }
 li {
     list-style: none;
 }
@@ -76,4 +74,4 @@ a {
     color: var(--purple);
     font-size: 110%;
     font-weight: bolder;
-}
+} */
