--- a/style/style.css
+++ b/style/style.css
@@ -10,16 +10,15 @@
   padding: 0;
   margin: 0;
 }
-
 html {
   font-size: 62.5%;
 }
+body {
+  font-size: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
 @media screen and (max-width: 599px) {
-  body {
-    font-size: 1.6rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-  }
   header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
       url(../img/showcase.jpg);
@@ -32,11 +31,28 @@ html {
     color: white;
     text-decoration: none;
   }
+  .header-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
   .header-nav {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     padding-top: 0.5rem;
+  }
+  .header-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .header-text-main {
+    font-size: 5rem;
+    text-align: center;
+    vertical-align: center;
+    padding-top: 5rem;
   }
   .hamburger {
     display: flex;
