--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,6 @@
   --black: hsl(0, 0%, 8%);
   --purple: hsl(274, 53%, 37%);
 }
-
 *,
 *::before,
 *::after {
@@ -22,6 +21,10 @@ body {
   header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
       url(../img/showcase.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
     height: 500px;
   }
   li {
@@ -35,6 +38,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    /* THIS HEIGHT EQUALS THE WIDTH OF THE VIEWPORT */
+    height: 100vw;
   }
   .header-nav {
     display: flex;
@@ -46,18 +51,41 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    justify-content: center;
+    height: 100%;
   }
   .header-text-main {
     font-size: 5rem;
     text-align: center;
     vertical-align: center;
-    padding-top: 5rem;
+    line-height: 1;
   }
+  .header-text-small {
+    font-size: 1rem;
+    margin-top: 1rem;
+    font-weight: 600;
+  }
+  /* HAMBURGER MENU */
   .hamburger {
     display: flex;
     padding: 1rem 2rem;
     font-size: 4rem;
+  }
+  .hamburger-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .hamburger-list-item {
+    display: none;
+    padding: 1rem;
+    transition: 0.5s ease;
+    font-size: 3rem;
+  }
+  .hamburger-list-item:hover {
+    transition: 0.5s ease;
+    color: var(--purple);
   }
   .header-right {
     display: none;
@@ -79,6 +107,14 @@ body {
   .emphasis {
     color: var(--purple);
     font-weight: bolder;
+  }
+  .hamburger-page {
+    position: -100%;
+    transition: 1s ease-in-out;
+  }
+  .main-container {
+    height: 2400px;
+    margin: auto;
   }
 }
 
