--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 :root {
+  --white: hsl(0, 0%, 100%);
   --black: hsl(0, 0%, 8%);
   --purple: hsl(274, 53%, 37%);
 }
@@ -18,6 +19,11 @@ body {
   color: white;
 }
 @media screen and (max-width: 599px) {
+  .text-container {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
   header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
       url(../img/showcase.jpg);
@@ -61,7 +67,8 @@ body {
     line-height: 1;
   }
   .header-text-small {
-    font-size: 1rem;
+    font-size: 1.1rem;
+    letter-spacing: 2px;
     margin-top: 1rem;
     font-weight: 600;
   }
@@ -115,6 +122,60 @@ body {
   .main-container {
     height: 2400px;
     margin: auto;
+    position: relative;
+    top: -2.2rem;
+  }
+  .main-article {
+    max-width: 1920px;
+    width: 100%;
+  }
+  .main-article-body {
+    width: 75%;
+    margin: auto;
+    display: relative;
+    flex-direction: column;
+  }
+  .main-article-item {
+    flex: 1;
+    width: 100%;
+    aspect-ratio: 1/1;
+  }
+  .item1 {
+    background-color: aliceblue;
+  }
+  .item2 {
+    background-color: blueviolet;
+  }
+  .item3 {
+    background-color: aqua;
+  }
+  .item4 {
+    background-color: khaki;
+  }
+  .item5 {
+    background-color: cadetblue;
+  }
+  .button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .button {
+    background-color: var(--purple);
+    margin: auto;
+    color: white;
+    border: none;
+    padding: 1.5rem 4rem;
+    margin: 1rem 0;
+  }
+  .bottom-article {
+    background-color: grey;
+    width: 100%;
+    height: 1080px;
+  }
+  .positions-button {
+    margin-top: 20rem;
   }
 }
 
