starting on tablet viewport

--- a/style/style.css
+++ b/style/style.css
@@ -214,6 +214,15 @@ body {
   .text-shadow {
     text-shadow: 1px 5px 7px rgba(0, 0, 0, 0.8);
   }
+  /* FOOTER  */
+  .footer-logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer-logo {
+    max-width: 50px;
+  }
 }
 
 @media (min-width: 600px) {
