--- a/style/style.css
+++ b/style/style.css
@@ -135,13 +135,13 @@ body {
   .main-article-body {
     width: 75%;
     margin: auto;
-    display: relative;
+    display: flex;
     flex-direction: column;
   }
   .main-article-item {
-    flex: 1;
-    width: 100%;
-    aspect-ratio: 1/1;
+    position: relative;
+    padding-bottom: 100%; /* This maintains the 1:1 aspect ratio */
+    overflow: hidden;
   }
   .item1 {
     background-color: aliceblue;
@@ -157,6 +157,20 @@ body {
   }
   .item5 {
     background-color: cadetblue;
+  }
+  .main-article-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .main-article-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the container */
+    transform: translate(-50%, -50%); /* Centers the image */
   }
   .button-container {
     display: flex;
@@ -213,6 +227,10 @@ body {
   }
   .text-shadow {
     text-shadow: 1px 5px 7px rgba(0, 0, 0, 0.8);
+  }
+  .footer-logo {
+    height: 100px;
+    width: 100px;
   }
 }
 
