--- a/style/style.css
+++ b/style/style.css
@@ -15,228 +15,215 @@ html {
 }
 body {
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
 }
-@media screen and (max-width: 599px) {
-  .hero-text-container {
-    text-align: center;
-  }
-  header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
-      url(../img/showcase.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 500px;
-  }
-  li {
-    list-style: none;
-  }
-  a {
-    color: white;
-    text-decoration: none;
-  }
-  .header-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vw;
-  }
-  .header-nav {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    padding-top: 0.5rem;
-  }
-  .header-text-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-  }
-  .header-text-main {
-    font-size: 5rem;
-    text-align: center;
-    vertical-align: center;
-    line-height: 1;
-  }
-  .header-text-small {
-    font-size: 1.1rem;
-    letter-spacing: 2px;
-    margin-top: 1rem;
-    font-weight: 600;
-  }
-  /* HAMBURGER MENU ICON */
-  .hamburger-icon {
-    display: flex;
-    z-index: 1000;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 1rem 1.5rem;
-    font-size: 4rem;
-    text-shadow: 1px 2px 0px black;
-  }
-  .hamburger-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .hamburger-list-item {
-    display: none;
-    padding: 1rem;
-    transition: 0.5s ease;
-    font-size: 3rem;
-  }
-  .hamburger-list-item:hover {
-    transition: 0.5s ease;
-    color: var(--purple);
-  }
-  .header-right {
-    display: none;
-  }
-  .nav-list {
-    display: flex;
-    justify-content: space-between;
-  }
-  .nav-link {
-    font-weight: bolder;
-  }
-  .nav-logo {
-    max-height: 70px;
-  }
-  .header-text-wrapper {
-    display: flex;
-    justify-content: center;
-  }
-  .emphasis {
-    color: blueviolet;
-    font-weight: bolder;
-  }
-  .hamburger-page {
-    position: -100%;
-    transition: 1s ease-in-out;
-  }
-  .main-container {
-    height: 2400px;
-    margin: auto;
-    position: relative;
-    top: -2.2rem;
-  }
-  .main-article {
-    max-width: 1920px;
-    width: 100%;
-  }
-  .main-article-body {
-    width: 75%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .main-article-item {
-    position: relative;
-    padding-bottom: 100%; /* This maintains the 1:1 aspect ratio */
-    overflow: hidden;
-  }
-  .item1 {
-    background-color: aliceblue;
-  }
-  .item2 {
-    background-color: blueviolet;
-  }
-  .item3 {
-    background-color: aqua;
-  }
-  .item4 {
-    background-color: khaki;
-  }
-  .item5 {
-    background-color: cadetblue;
-  }
-  .main-article-link {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  .main-article-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Ensures the image covers the container */
-    transform: translate(-50%, -50%); /* Centers the image */
-  }
-  .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-  .button {
-    background-color: var(--purple);
-    margin: auto;
-    color: white;
-    border: none;
-    padding: 1.5rem 4rem;
-    margin: 1rem 0;
-  }
-  /* BOTTOM ARTICLE  ******************************************************************/
-  .bottom-article {
-    background-image: linear-gradient(
-        rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.5)
-      ),
-      url(../img/arcadeBack.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    width: 100%;
-    height: 1080px;
-    position: relative;
-  }
-  .hero-text-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  .positions-heading {
-    padding-top: 15rem;
-    font-size: 4rem;
-    line-height: 1.5;
-  }
-  .positions-text {
-    padding: 2rem 0;
-    margin: 0;
-  }
-  .positions-button {
-    margin-top: 2rem;
-    background-color: white;
-    color: var(--purple);
-  }
-  .positions-button:hover {
-    background-color: var(--purple);
-    color: white;
-  }
-  .text-shadow {
-    text-shadow: 1px 5px 7px rgba(0, 0, 0, 0.8);
-  }
+
+.emphasis {
+  color: blueviolet;
+  font-weight: bolder;
+}
+.text-shadow {
+  text-shadow: 1px 5px 7px rgba(0, 0, 0, 0.8);
+}
+.text-centered {
+  text-align: center;
+}
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
+    url(../img/showcase.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 500px;
+}
+li {
+  list-style: none;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vw;
+}
+.header-nav {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  padding-top: 0.5rem;
+}
+.header-nav-logo {
+  max-height: 70px;
+}
+.header-right {
+  display: none;
+}
+.header-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.header-text-main {
+  font-size: 5rem;
+  text-align: center;
+  vertical-align: center;
+  line-height: 1;
+}
+.header-text-small {
+  font-size: 1.1rem;
+  letter-spacing: 2px;
+  margin-top: 1rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+/* HAMBURGER MENU ICON */
+.hamburger-icon {
+  display: flex;
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 1rem 1.5rem;
+  font-size: 4rem;
+  text-shadow: 1px 2px 0px black;
+}
+.hamburger-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.hamburger-list-item {
+  display: none;
+  padding: 1rem;
+  transition: 0.5s ease;
+  font-size: 3rem;
+}
+.hamburger-list-item:hover {
+  transition: 0.5s ease;
+  color: var(--purple);
+}
+
+/* FIXME: mobile navigation doesn't exist */
+.mobile-navigation {
+  position: -100%;
+  opacity: 0;
+  transition: 500ms ease-in-out;
+}
+
+/* MAIN ARTICLES  *************************************************************/
+.main-container {
+  height: 2400px;
+  margin: 0 auto;
+}
+.main-article {
+  max-width: 999px;
+  width: 100%;
+}
+.main-article-body {
+  width: 75%;
+  margin: 0 auto;
+  margin-top: -2.2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+}
+.main-article-item {
+  width: 100%;
+  height: 250px; /* fixed height for all articles */
+  overflow: hidden;
+  position: relative;
+}
+.main-article-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.main-article-image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* fill without stretching */
+  object-position: center; /* crop from the center */
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.button {
+  background-color: var(--purple);
+  margin: auto;
+  color: white;
+  border: none;
+  padding: 1.5rem 4rem;
+  margin: 1rem 0;
+}
+
+/* BOTTOM ARTICLE  *****************************************************/
+.positions-article {
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url(../img/arcadeBack.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  width: 100%;
+  height: 1080px;
+  position: relative;
+}
+
+.positions-button {
+  margin-top: 2rem;
+  background-color: white;
+  color: var(--purple);
+}
+.positions-button:hover {
+  background-color: var(--purple);
+  color: white;
 }
 
 @media (min-width: 600px) {
-  .header-right {
+  .header__right {
     display: flex;
   }
-  .header-nav {
+  .header__nav {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0.5rem 2rem;
+  }
+  .header-container {
+    height: 50vw;
+  }
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-article-body {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  .main-article-item {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
   }
 }
 @media (min-width: 900px) {
