edit hero text, fix article grid, add footer

--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
   --white: hsl(0, 0%, 100%);
   --black: hsl(0, 0%, 8%);
   --purple: rgb(150, 58, 220);
+  --light-purple: rgb(187, 107, 249);
 }
 *,
 *::before,
@@ -20,10 +21,6 @@ body {
   color: white;
 }
 
-.emphasis {
-  color: blueviolet;
-  font-weight: bolder;
-}
 .text-shadow {
   text-shadow: 1px 5px 7px rgba(0, 0, 0, 0.8);
 }
@@ -48,46 +45,65 @@ a {
   text-decoration: none;
 }
 
-.header-container {
+/* HEADER BLOCK */
+.header {
   display: flex;
   flex-direction: column;
   height: 100vw;
 }
-.header-nav {
+.header__nav {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
-  padding-top: 0.5rem;
+  padding-top: 1rem;
 }
-.header-nav-logo {
-  max-height: 70px;
+.header__logo {
+  max-height: 75px;
 }
-.header-right {
+.header__left {
+  display: flex;
+  align-items: center;
+}
+.header__right {
   display: none;
 }
-.header-text-wrapper {
+.header__text-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
-}
-.header-text-main {
-  font-size: 5rem;
   text-align: center;
-  vertical-align: center;
-  line-height: 1;
+  height: 100%;
+  line-height: 0.75;
 }
-.header-text-small {
+.header__title {
+  font-size: 5rem;
+  font-weight: 700;
+  padding-bottom: 0.5rem;
+}
+.header__title-accent {
+  color: blueviolet;
+  font-weight: 900;
+}
+.header__tagline {
+  padding-top: 2rem;
   font-size: 1.1rem;
   letter-spacing: 2px;
   margin-top: 1rem;
   font-weight: 600;
-  text-align: center;
+}
+.header__subtitle {
+  font-weight: 800;
+  font-size: 6rem;
+  text-transform: uppercase;
+  display: inline-block;
+  transform: scaleY(1.25);
+  transform-origin: center;
+  letter-spacing: 6px;
 }
 
-/* HAMBURGER MENU ICON */
-.hamburger-icon {
+/* HAMBURGER MENU BLOCK */
+.hamburger {
   display: flex;
   z-index: 1000;
   position: fixed;
@@ -97,19 +113,19 @@ a {
   font-size: 4rem;
   text-shadow: 1px 2px 0px black;
 }
-.hamburger-menu {
+.hamburger-menu__list {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.hamburger-list-item {
+.hamburger-menu__item {
   display: none;
   padding: 1rem;
   transition: 0.5s ease;
   font-size: 3rem;
 }
-.hamburger-list-item:hover {
+.hamburger-menu__item:hover {
   transition: 0.5s ease;
   color: var(--purple);
 }
@@ -121,42 +137,62 @@ a {
   transition: 500ms ease-in-out;
 }
 
-/* MAIN ARTICLES  *************************************************************/
-.main-container {
-  height: 2400px;
-  margin: 0 auto;
+/* MAIN */
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.main-article {
-  max-width: 999px;
-  width: 100%;
-}
-.main-article-body {
+
+/* ARTICLES */
+.articles {
   width: 75%;
   margin: 0 auto;
   margin-top: -2.2rem;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: 250px;
 }
-.main-article-item {
+.article {
   width: 100%;
-  height: 250px; /* fixed height for all articles */
+  height: 250px;
   overflow: hidden;
   position: relative;
 }
-.main-article-link {
+.article__link {
   display: block;
   width: 100%;
   height: 100%;
+  position: relative;
+  overflow: hidden;
 }
-.main-article-image {
+.article__gradient {
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+}
+.article__text {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.5rem 1rem;
+  margin: 1rem;
+  bottom: 0;
+  font-size: 1.5rem;
+  position: absolute;
+  z-index: 1;
+}
+.article__image {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* fill without stretching */
-  object-position: center; /* crop from the center */
+  object-fit: cover;
+  object-position: center;
 }
 
+/* BUTTON COMPONENT */
 .button-container {
   display: flex;
   justify-content: center;
@@ -170,10 +206,22 @@ a {
   border: none;
   padding: 1.5rem 4rem;
   margin: 1rem 0;
+  font-weight: 600;
+}
+.button--positions {
+  margin-top: 2rem;
+  background-color: white;
+  color: var(--purple);
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+.button--positions:hover {
+  background-color: var(--purple);
+  color: white;
 }
 
-/* BOTTOM ARTICLE  *****************************************************/
-.positions-article {
+/* POSITIONS BLOCK */
+.positions {
   background-image: linear-gradient(
       rgba(255, 255, 255, 0.1),
       rgba(255, 255, 255, 0.5)
@@ -183,52 +231,138 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  width: 100%;
   height: 1080px;
   position: relative;
+  padding-top: 10rem;
+}
+.positions__text-wrapper {
+  text-align: center;
+  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+.positions__title {
+  font-style: italic;
+}
+.positions__tagline {
+  font-size: 1.5rem;
 }
 
-.positions-button {
-  margin-top: 2rem;
-  background-color: white;
-  color: var(--purple);
+/* FOOTER BLOCK */
+.footer {
+  border-top: 2px white solid;
+  background-image: linear-gradient(
+      rgba(147, 89, 190, 0.5),
+      rgba(242, 224, 255, 0.9)
+    ),
+    url(../img/storeBack.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  min-height: 450px;
 }
-.positions-button:hover {
-  background-color: var(--purple);
-  color: white;
+.footer__logo-container {
+}
+.footer__logo {
+}
+.footer__nav {
+}
+.footer__nav-item {
+}
+.footer__text-container {
+}
+.footer__text {
+}
+.footer__links {
 }
 
+/* MEDIA QUERIES */
 @media (min-width: 600px) {
-  .header__right {
-    display: flex;
-  }
-  .header__nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem 2rem;
-  }
-  .header-container {
+  .header {
     height: 50vw;
   }
-  .main-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .main-article-body {
+  .articles {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
-  .main-article-item {
-    grid-column: 3 / 4;
-    grid-row: 1 / 3;
+  .article {
+    height: 100%;
+  }
+  .article:nth-child(1) {
+    grid-column: 1 / 3; /* Spans columns 1-2 */
+    grid-row: 1 / 3; /* Spans rows 1-2 */
+  }
+  .article:nth-child(2) {
+    grid-column: 3 / 4; /* Column 3 */
+    grid-row: 1 / 3; /* Spans rows 1-2 */
+  }
+  .article:nth-child(3) {
+    grid-column: 1 / 2; /* Column 1 */
+    grid-row: 3 / 4; /* Row 3 */
+  }
+  .article:nth-child(4) {
+    grid-column: 2 / 3; /* Column 2 */
+    grid-row: 3 / 4; /* Row 3 */
+  }
+  .article:nth-child(5) {
+    grid-column: 3 / 4; /* Column 3 */
+    grid-row: 3 / 4; /* Row 3 */
   }
 }
-@media (min-width: 900px) {
+@media (min-width: 800px) {
+  /* TODO: FIX DESKTOP FONT SIZES FOR HERO SECTION */
   .hamburger {
     display: none;
+  }
+  .header {
+    height: 50vh;
+  }
+  .header__nav {
+    flex-direction: row;
+  }
+  .header__left {
+    padding-top: 1rem;
+  }
+  .header__logo {
+    max-height: 125px;
+    margin-left: 5rem;
+  }
+  .header__right {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 65%;
+    gap: 6rem;
+    padding-right: 6rem;
+  }
+  .nav__link {
+    font-size: 1.8rem;
+    font-weight: 500;
+  }
+  .header__title {
+    font-size: 10rem;
+    font-weight: 700;
+    padding-bottom: 1rem;
+  }
+  .header__tagline {
+    padding-top: 4rem;
+    font-size: 2.2rem;
+    letter-spacing: 2px;
+    margin-top: 2rem;
+    font-weight: 600;
+  }
+  .header__subtitle {
+    font-weight: 800;
+    font-size: 12.5rem;
+    transform-origin: center;
+    letter-spacing: 6px;
+  }
+  .positions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
   }
 }
 @media (min-width: 1200px) {
