--- a/style/style.css
+++ b/style/style.css
@@ -260,7 +260,7 @@ a {
   width: 100%;
   min-height: 450px;
 }
-.footer__logo-container {
+/* .footer__logo-container {
 }
 .footer__logo {
 }
@@ -273,7 +273,7 @@ a {
 .footer__text {
 }
 .footer__links {
-}
+} */
 
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
