--- a/style/style.css
+++ b/style/style.css
@@ -260,7 +260,7 @@ a {
   width: 100%;
   min-height: 450px;
 }
-/* .footer__logo-container {
+.footer__logo-container {
 }
 .footer__logo {
 }
@@ -273,4 +273,4 @@ a {
 .footer__text {
 }
 .footer__links {
-} */
+}
