--- a/style/style-tablet.css
+++ b/style/style-tablet.css
@@ -22,6 +22,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    min-height: 750px;
   }
   .article {
     height: 100%;
@@ -45,5 +46,17 @@
   .article:nth-child(5) {
     grid-column: 3 / 4; /* Column 3 */
     grid-row: 3 / 4; /* Row 3 */
+  }
+  .footer__nav {
+    font-size: 2rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+  }
+  .footer__text {
+    font-size: 1.5rem;
   }
 }
