--- a/style/style.css
+++ b/style/style.css
@@ -250,27 +250,47 @@ a {
 .footer {
   border-top: 2px white solid;
   background-image: linear-gradient(
-      rgba(147, 89, 190, 0.5),
-      rgba(242, 224, 255, 0.9)
+      rgba(70, 0, 123, 0.5),
+      rgba(123, 76, 157, 0.9)
     ),
     url(../img/storeBack.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  min-height: 450px;
-}
-.footer__logo-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 .footer__logo {
+  max-width: 100px;
+  padding-bottom: 3rem;
 }
 .footer__nav {
-}
-.footer__nav-item {
-}
-.footer__text-container {
+  font-weight: 500;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  width: 100%;
+  padding: 0 2rem;
 }
 .footer__text {
+  font-size: 3vw;
 }
 .footer__links {
+  display: flex;
+  gap: 2rem;
+  font-style: italic;
+  font-weight: 400;
+  text-decoration: underline;
+  font-size: 2rem;
+}
+.my-links {
+  margin-bottom: -2rem;
 }
