--- a/style/style.css
+++ b/style/style.css
@@ -72,34 +72,45 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
   text-align: center;
   height: 100%;
   line-height: 0.75;
 }
 .header__title {
   font-size: 5rem;
-  font-weight: 700;
+  font-weight: 100;
   padding-bottom: 0.5rem;
+  transform: scaleY(1.1) rotate(3deg);
+  position: relative;
+  z-index: 2;
 }
 .header__title-accent {
-  color: blueviolet;
+  background: linear-gradient(90deg, #007aff, blueviolet, purple);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
   font-weight: 900;
 }
 .header__tagline {
   padding-top: 2rem;
   font-size: 1.1rem;
   letter-spacing: 2px;
-  margin-top: 1rem;
+  margin-top: 1vw;
   font-weight: 600;
 }
 .header__subtitle {
-  font-weight: 800;
+  font-weight: 900;
   font-size: 6rem;
   text-transform: uppercase;
   display: inline-block;
-  transform: scaleY(1.25);
+  transform: scaleY(1.5);
   transform-origin: center;
-  letter-spacing: 6px;
+  letter-spacing: 10px;
+  position: relative;
+  z-index: 1;
+  text-shadow: 0px 0px 5px pink;
 }
 
 /* HAMBURGER MENU BLOCK */
@@ -215,7 +226,7 @@ a {
   font-weight: 600;
   letter-spacing: 0.1rem;
 }
-.button--positions:hover {
+.button:hover {
   background-color: var(--purple);
   color: white;
 }
@@ -223,27 +234,30 @@ a {
 /* POSITIONS BLOCK */
 .positions {
   background-image: linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(255, 255, 255, 0.5)
+      rgba(60, 7, 95, 0.5),
+      rgba(191, 174, 203, 0.3)
     ),
     url(../img/arcadeBack.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 1080px;
-  position: relative;
-  padding-top: 10rem;
+  min-height: 750px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 .positions__text-wrapper {
   text-align: center;
-  text-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 .positions__title {
-  font-style: italic;
+  font-size: 5vw;
 }
 .positions__tagline {
-  font-size: 1.5rem;
+  font-size: 4vw;
+  text-shadow: 0px 0px 5px black;
 }
 
 /* FOOTER BLOCK */
