--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ body {
 
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
-    url(../img/showcase.jpg);
+    url(../img/showcase_lores.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -124,28 +124,57 @@ a {
   font-size: 4rem;
   text-shadow: 1px 2px 0px black;
 }
-.hamburger-menu__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.hamburger-menu__item {
+.display-none {
   display: none;
-  padding: 1rem;
-  transition: 0.5s ease;
-  font-size: 3rem;
-}
-.hamburger-menu__item:hover {
-  transition: 0.5s ease;
-  color: var(--purple);
 }
 
-/* FIXME: mobile navigation doesn't exist */
-.mobile-navigation {
-  position: -100%;
-  opacity: 0;
-  transition: 500ms ease-in-out;
+.hamburger-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  transform: translateX(-100%);
+  transition: transform 0.4s ease;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+}
+.hamburger-menu.open {
+  transform: translateX(0);
+}
+.hamburger-menu__close {
+  display: flex;
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 1rem 1.8rem;
+  font-size: 4rem;
+}
+.hamburger-menu__list {
+  list-style: none;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hamburger-menu__item {
+  margin: 1rem 0;
+}
+
+.hamburger-menu__item a {
+  color: white;
+  font-size: 2rem;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.hamburger-menu__item a:hover {
+  color: var(--purple, purple);
 }
 
 /* MAIN */
@@ -237,7 +266,7 @@ a {
       rgba(60, 7, 95, 0.5),
       rgba(191, 174, 203, 0.3)
     ),
-    url(../img/arcadeBack.jpg);
+    url(../img/arcadeBack-lores.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -267,7 +296,7 @@ a {
       rgba(70, 0, 123, 0.5),
       rgba(123, 76, 157, 0.9)
     ),
-    url(../img/storeBack.jpg);
+    url(../img/storeBack-lores.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
