--- a/style/style-desktop.css
+++ b/style/style-desktop.css
@@ -60,6 +60,7 @@
     justify-content: center;
     align-items: center;
     font-size: 4rem;
+    width: 60%;
   }
   .positions__title {
     font-size: 4rem;
@@ -69,20 +70,11 @@
   }
   /* FOOTER BLOCK */
   .footer {
-    border-top: 2px white solid;
     background-image: linear-gradient(
         rgba(70, 0, 123, 0.5),
         rgba(123, 76, 157, 0.9)
       ),
-      url(../img/storeBack.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+      url(../img/storeBack-lores.jpg);
     gap: 3rem;
     padding-top: 6rem;
     padding-bottom: 6rem;
