--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,15 @@ a {
   color: white;
   text-decoration: none;
 }
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: grey;
+  width: 100%;
+  height: 100%;
+}
 
 /* HEADER BLOCK */
 .header {
@@ -59,6 +68,7 @@ a {
 }
 .header__logo {
   max-height: 75px;
+  cursor: pointer;
 }
 .header__left {
   display: flex;
