--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,9 @@ body {
 .text-centered {
   text-align: center;
 }
+.text-allcaps {
+  text-transform: uppercase;
+}
 
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
@@ -43,15 +46,6 @@ li {
 a {
   color: white;
   text-decoration: none;
-}
-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: grey;
-  width: 100%;
-  height: 100%;
 }
 
 /* HEADER BLOCK */
